role section has been solved 31 | 05 | 2024